@@ -1,3 +1,9 @@
+Tue Mar  6 19:39:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
+
+	* attributes.[ch] extra.[ch] preproc.c xsltInternals.h
+	  transform.[ch]: previous commit broke a lot of stuff, fixing
+	  and preparing for next step
+
 Tue Mar  6 19:03:21 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* libxslt/preproc.[ch] Makefile.am templates.[ch] transform.[ch]
